tests/conformance/syntax/positive/no_where_block_valid.ditt
module Syntax.NoWhereBlock where

postulate C : Cat
id (x : C) : C = x
