tests/conformance/syntax/negative/local_modules_missing_where_invalid.ditt
module Syntax.LocalModulesBad where

module Inner
  postulate C : Cat
